--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -23,6 +23,7 @@
 
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/publications.css">
+    <meta name="google-site-verification" content="5b99CtYaK709CZNOpftM4c98Pmtlelxrir2TrvO-9VE" />
 
   </head>
   <body>
